Update contact information in footer section

--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
             <div class="footer-section">
                 <h5>تواصل معنا</h5>
                 <ul>
-                    <li><i class="fa fa-envelope" style="margin-left: 5px;"></i> info@baan.com</li>
-                    <li><i class="fa fa-phone-alt" style="margin-left: 5px;"></i> +XXXXXXXXXXXX</li>
+                    <li><i class="fa fa-envelope" style="margin-left: 5px;"></i> mutazlifezone@gmail.com</li>
+                    <li><i class="fa fa-phone-alt" style="margin-left: 5px;"></i> +201122394912</li>
                     <li><i class="fa fa-map-marker-alt" style="margin-left: 5px;"></i> مقرنا: مصر، القاهرة</li>
                 </ul>
                 <div class="socials">
@@ -592,8 +592,8 @@
     </footer>
 
     <div class="float-contact">
-        <a href="https://wa.me/XXXXXXXXXXXX" target="_blank" class="whatsapp" aria-label="تواصل عبر واتساب"><i class="fab fa-whatsapp"></i></a>
-        <a href="tel:+XXXXXXXXXXXX" target="_blank" class="phone" aria-label="اتصال مباشر"><i class="fa fa-phone-alt"></i></a>
+        <a href="https://wa.me/24912500618" target="_blank" class="whatsapp" aria-label="تواصل عبر واتساب"><i class="fab fa-whatsapp"></i></a>
+        <a href="tel:+201122394912" target="_blank" class="phone" aria-label="اتصال مباشر"><i class="fa fa-phone-alt"></i></a>
     </div>
 
     <script>
