--- a/index.html
+++ b/index.html
@@ -541,9 +541,9 @@
         <div class="contact-grid">
             <div class="contact-buttons">
                 <h4>التواصل السريع:</h4>
-                <a href="https://wa.me/XXXXXXXXXXXX" target="_blank" class="whatsapp"><i class="fa fa-whatsapp"></i> تواصل عبر الواتساب (الأسرع)</a>
-                <a href="tel:+XXXXXXXXXXXX" target="_blank" class="phone"><i class="fa fa-phone-alt"></i> اتصال مباشر</a>
-                <a href="mailto:info@baan.com" target="_blank" style="background:#dc2626;"><i class="fa fa-envelope"></i> أرسل بريداً إلكترونياً</a>
+                <a href="https://wa.me/249912500618" target="_blank" class="whatsapp"><i class="fa fa-whatsapp"></i> تواصل عبر الواتساب (الأسرع)</a>
+                <a href="tel:+201122394912" target="_blank" class="phone"><i class="fa fa-phone-alt"></i> اتصال مباشر</a>
+                <a href="mutazlifrzone@gmai.com" target="_blank" style="background:#dc2626;"><i class="fa fa-envelope"></i> أرسل بريداً إلكترونياً</a>
             </div>
             <div class="what-you-get">
                 <h4>ما ستحصل عليه:</h4>
