--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@
     <section id="full-scope" style="max-width: 1200px; margin: 50px auto; padding: 40px 24px; text-align: right; background: var(--navy); color: white; border-radius: 16px;">
         <h2 style="font-size: 28px; font-weight: 900; margin-bottom: 20px; color: white; text-align: center;">خبرة برمجية تتجاوز التجارة الإلكترونية</h2>
         <p style="font-size: 16px; line-height: 1.8; color: #aab7c6; text-align: center; max-width: 900px; margin: 0 auto;">
-            نحن لا نقتصر على تطوير المتاجر فحسب، بل نعمل في **جميع مجالات البرمجة والتطوير**؛ بدءًا من أنظمة إدارة الموارد (ERP)، أنظمة إدارة علاقات العملاء (CRM)، تطوير الـ Blockchains، وحتى تصميم وتطوير التطبيقات الخاصة والمخصصة كليًا (Custom Software Development).
+            نحن لا نقتصر على تطوير المتاجر فحسب، بل نعمل في جميع مجالات البرمجة والتطوير؛ بدءًا من أنظمة إدارة الموارد (ERP)، أنظمة إدارة علاقات العملاء (CRM)، تطوير الـ Blockchains، وحتى تصميم وتطوير التطبيقات الخاصة والمخصصة كليًا (Custom Software Development).
             </p>
         <p style="font-size: 16px; line-height: 1.8; color: #aab7c6; text-align: center; max-width: 900px; margin: 20px auto 0;">
-            لدينا أيضًا **أكواد مفتوحة المصدر (Open Source)** لمجموعة مختارة من المتاجر العالمية الشهيرة، والتي يمكننا **تخصيصها بالكامل** لتتناسب مع متطلبات عملك الفريدة وتوفير وقت وجهد البدء. تواصل معنا لمناقشة مشروعك أيًا كان حجمه أو تعقيده.
+            لدينا أيضًا أكواد مفتوحة المصدر (Open Source) لمجموعة مختارة من المتاجر العالمية الشهيرة، والتي يمكننا **تخصيصها بالكامل لتتناسب مع متطلبات عملك الفريدة وتوفير وقت وجهد البدء. تواصل معنا لمناقشة مشروعك أيًا كان حجمه أو تعقيده.
         </p>
         <div class="cta" style="margin-top: 30px;">
             <a class="ghost" href="#contact" style="background:var(--accent); color:white; border:none; max-width: 350px;"><i class="fa fa-code" style="margin-left: 10px;"></i> استكشف حلول البرمجة المخصصة</a>
